# comunism-project

./: .contextignore  .gitignore  AQUIEHCOMUNISMO.c  Cargo.toml  Decisões.js  EUSOUSUPERIOR.IAMNOONE  IDEAS.md  Makefile  Nao_pode_cria.py  README.md  RODADOR-DE-BIRL.js  chatlgbt.py  comunism_snake.go  fireworks.ga  go.mod  go.sum  iamnoone.pl  package-lock.json  pom.xml  rosquinha.rs  safada.js  shellrace.sh  teste_python.py  tutor.ga  upload-to-s3.cs
AulaDeNodeJS/: database-memory.js  database-postgres.js  package.json  server.js
SnorlaxS3/: Program.cs  SnorlaxS3.csproj
authBancoDoBrasil/: uBBAuth.pas  uBBAuthRequest.pas
backend/: .env.development.example  .env.production.example  .gitignore  Dockerfile  package-lock.json
birlProjects/: package.json
cobrancaPIXBancoDoBrasil/: uBBPixCobConsultaTxid.pas  uBBPixCobCriaCobrancaImediata.pas  uBBPixCobGetTxid.pas  uBBPixCobRequest.pas  uBBPixCobResponse.pas
comunism-project/: index.html  package-lock.json  package.json
diaBET/: README.md  package.json
docker/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docs/: DOCKER_SETUP.md  PATH_FIX.md  PROJECT_STRUCTURE.md  QUICK_START.md  REORGANIZATION.md  SETUP_CHECKLIST.md
frontend/: .env.development.example  .env.production.example  .gitignore  Dockerfile
gambalang/: Cargo.toml
java/: pom.xml
maça_do_mal/: go.mod  main.go
minecraftty/: Cargo.toml
pikachufetch/: main.go
scripts/: bad_apple.ron  chatlgbt.ron  comunism_snake.ron  comunismo.ron  gamba_fireworks.ron  gamba_tutor.ron  gambalang.ron  pikachu_fetch.ron  relogio_birl.ron  (+3 more)
(+324 files in other folders)
