[package]
name = "comunism-project"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ctrlc = "3.5.0"
ratatui = "0.29.0"
once_cell = "1.21.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
portable-pty = "0.8"
vt100 = "0.15"
crossbeam-channel = "0.5"
anyhow = "1.0"
gambalang = { package = "gamba", path = "gambalang" }

[workspace]
members = [".", "gambalang"]
resolver = "2"

workspace.exclude = ["ascii_browser", "minecraftty"]
